need fix login btn and collapse

--- a/assets/styles/frontend.less
+++ b/assets/styles/frontend.less
@@ -1,10 +1,10 @@
 /*
-	CSS書寫順序
-	1.位置屬性(position, top, right, z-index, display, float等)
-	2.大小(width, height, padding, margin)
-	3.文字系列(font, line-height, letter-spacing, color- text-align等)
-	4.背景(background, border等)
-	5.其他(animation, transition等)
+    CSS書寫順序
+    1.位置屬性(position, top, right, z-index, display, float等)
+    2.大小(width, height, padding, margin)
+    3.文字系列(font, line-height, letter-spacing, color- text-align等)
+    4.背景(background, border等)
+    5.其他(animation, transition等)
 */
 
 //全域元件
@@ -12,12 +12,12 @@
 @font-face {
     font-family: '思源黑體';
     src: url('fonts/SourceHanSansTC-Normal.otf');
-    //TODO: 修復BUG 
+    //TODO: 修復BUG
 }
 
 body {
     min-height: 100vh;
-	font-family: '思源黑體', '微軟正黑體';
+    font-family: '思源黑體', '微軟正黑體';
     background-color: @dark-gray;
 }
 
@@ -30,7 +30,7 @@ body {
 }
 
 .red {
-    color: red;   
+    color: red;
 }
 
 .bg-white {
@@ -38,7 +38,7 @@ body {
 }
 
 .bg-light-gray {
-	background-color: @light-gray;
+    background-color: @light-gray;
 }
 
 .btn-green {
@@ -65,22 +65,24 @@ body>header {
         height: @nav-fixed-height;
     }
 
-	>nav.navbar-default {
-        height: inherit;
-	    border-bottom: solid @nav-border-bottom-width;
+    >nav.navbar-default {
+        height: initial;
+        border-bottom: solid @nav-border-bottom-width;
         border-bottom-color: @green;
-	    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
-        background-color: white;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+        background-color: rgb(55, 126, 83);
+        font-size: 16px;
+        color: #fff;
 
         >div.container {
             height: calc(@nav-fixed-height - @nav-border-bottom-width);;
             @media(max-width:767px) {
                 background-color: inherit;
             }
-        
-            div.navbar-header {      
+
+            div.navbar-header {
                 @media(max-width:767px) {
-                    height: @nav-fixed-height; 
+                    height: @nav-fixed-height;
                 }
                 padding: @nav-padding;
 
@@ -101,7 +103,7 @@ body>header {
                         float: none;
                         line-height: calc(@nav-fixed-height - 2 * @nav-padding);
                     }
-                        
+
                     >img {
                         max-width: 100%;
                         max-height: 100%;
@@ -112,29 +114,29 @@ body>header {
                         }
                     }
                 }
-            }  
+            }
             div.navbar-collapse {
                 max-height: none;
-                background-color: transparent;
+                background-color: #377e53;
                 @media(max-width:767px) {
                     background-color: inherit;
                 }
 
                 .login-area{
-                    float: right;
-
-                    li a {            
+                    float: left;
+                    margin-top: 15px;
+                    li a {
                         margin: 15px 0px 0px 10px;
                         padding: 5px 10px;
-                        color: @green;
-                        background-color: transparent;
+                        color: #fff;
+                        background-color: @green;
                         border: 2px solid @green;
-                        transition: all 0.3s;
+                        //transition: all 0.3s;
 
                         @media(max-width:767px) {
                             margin: 5px 10px;
                         }
-                    
+
                         &:after {
                             content: '';
                             position: absolute;
@@ -153,35 +155,22 @@ body>header {
                               width: 100%;
                             }
                         }
-                    }  
+                    }
 
                     @media(max-width:767px) {
                         float: none;
                         margin: 0px -15px;
                         text-align: center;
-
-                        li {
-                            display: block;   
-
-                            a {
-                                color: white;
-                                background: @green;
-
-                                &:hover {
-                                    background: @dark-green;
-                                }
-                            }
-                        }
                     }
-                } 
+                }
 
                 .main-nav {
                     clear: both;
 
                     @media(max-width:767px) {
                         margin: 0px -15px;
-                    } 
-                      
+                    }
+
                     >li>a {
                         top: 0px;
                         color: white;
@@ -197,11 +186,11 @@ body>header {
                             top: -3px;
                             color: @green;
                             background-color: @light-yellow;
-                        }          
+                        }
 
                         @media(max-width:767px) {
                             border-width: 0px 1px 2px 1px;
-                        }        
+                        }
                     }
                     >li.active>a {
                         top: -3px;
@@ -218,14 +207,14 @@ body>header {
                             color: white;
                             border-width: 1px 1px 0px 1px;
                             border-color: @green;
-                            border-style: solid;             
+                            border-style: solid;
                             background: @light-green;
 
                             @media(max-width:767px) {
                                 border-width: 0px 1px 1px 1px;
                                 color: @green;
                                 background-color: white;
-                            }    
+                            }
 
                             &:hover, &:focus {
                                 color: @green;
@@ -233,7 +222,7 @@ body>header {
                             }
                         }
                     }
-                }       
+                }
             }
             >button {
                 @media(min-width:768px) {
@@ -244,8 +233,8 @@ body>header {
                 margin-top: -1px;
                 margin-right: -15px;
             }
-        }            
-	}
+        }
+    }
 }
 
 body>section {
@@ -273,4 +262,30 @@ body>footer {
   -moz-box-shadow: 1px 1px 5px #999;
   -webkit-box-shadow: 1px 1px 5px #999;
   box-shadow: 1px 1px 5px #999;
+}
+
+.navbar-right {
+    margin-top: 15px;
+}
+body > header {
+    height: 89px !important;
+}
+.navbar-default .navbar-nav > li > a {
+    color: #fff !important;
+}
+.open > a:hover{
+    background-color: #377e53 !important;
+}
+.open > a{
+    background-color: #377e53 !important;
+}
+.dropdown-menu{
+    background-color: #377e53;//509238
+}
+.dropdown-menu > li > a{
+    color: #fff;
+}
+.dropdown-menu > li > a:hover{
+    color: #fff;
+    background-color: #509238;
 }
